# slopd

./: ARCHITECTURE.md  Cargo.toml  readme.md  slopd.service
.cargo/: config.toml
.github/workflows/: ci.yml
iroh-slopctl/: Cargo.toml
iroh-slopctl/src/: main.rs
iroh-slopd/: Cargo.toml  build.rs
iroh-slopd/src/: main.rs
iroh-slopd/tests/: integration.rs
iroh-sloptui/: Cargo.toml
iroh-sloptui/src/: main.rs
libslop/: Cargo.toml
libslop/src/: lib.rs
libslopctl/: Cargo.toml
libslopctl/src/: lib.rs
libsloptest/: Cargo.toml
libsloptest/src/: lib.rs
libsloptui-core/: Cargo.toml
libsloptui-core/src/: lib.rs
libsloptui-dioxus/: Cargo.toml
libsloptui-dioxus/src/: lib.rs
libsloptui-ratatui/: Cargo.toml
libsloptui-ratatui/src/: lib.rs
slop-proto/: Cargo.toml
slop-proto/src/: lib.rs
slopctl/: Cargo.toml
slopctl/src/: main.rs
slopctl/tests/: cli_parity.rs  integration.rs
slopd/: Cargo.toml
slopd/src/: main.rs  opencode.rs
slopd/tests/: integration.rs
sloptui/: Cargo.toml
sloptui/src/: main.rs
