[workspace]
members = [
    "slopd",
    "slopctl",
    "libslop",
    "libslopctl",
    "libsloptest",
    "iroh-slopd",
    "iroh-slopctl",
    "sloptui",
    "libsloptui-core",
    "libsloptui-dioxus",
    "iroh-sloptui",
]
resolver = "2"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }
