[package]
name = "iroh-slopctl"
version = "0.1.0"
edition = "2024"
description = "iroh-based remote CLI client for slopd — connects via iroh instead of Unix socket"

[dependencies]
libslop = { path = "../libslop" }
libslopctl = { path = "../libslopctl" }
iroh = "0.97"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1.1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
clap = { version = "4.6.0", features = ["derive"] }
dirs = "6.0.0"
getrandom = "0.4"
data-encoding = "2"
timeago = { version = "0.6.0", default-features = false }

[lints]
workspace = true
