[package]
name = "iroh-sloptui"
version = "0.1.0"
edition = "2024"
description = "iroh-based remote TUI process viewer for slopd"

[dependencies]
libslop = { path = "../libslop" }
libslopctl = { path = "../libslopctl" }
libsloptui-core = { path = "../libsloptui-core" }
libsloptui-dioxus = { path = "../libsloptui-dioxus" }
dioxus = "0.7"
dioxus-tui = { git = "https://github.com/JakkuSakura/dioxus-tui", branch = "main" }
iroh = "0.97"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1.1"
tracing = "0.1.44"
clap = { version = "4.6.0", features = ["derive"] }
getrandom = "0.4"
data-encoding = "2"

[lints]
workspace = true
