[package]
name = "libslop"
version = "0.1.0"
edition = "2024"
description = "Shared library for slopd/slopctl — protocol types, config, hook injection, path helpers"

[dependencies]
atomic-write-file = "0.3.0"
dirs = "6.0.0"
dotenvy = "0.15.7"
fd-lock = "4.0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shellexpand = { version = "3.1.2", features = ["full"] }
toml = "1.1.1"
tracing = "0.1.44"
which = "7"

[dev-dependencies]
tempfile = "3.27.0"
