[package]
name = "libslopctl"
version = "0.1.0"
edition = "2024"
description = "Transport-agnostic client library for slopd — JSON-RPC protocol, typed methods, streaming"

[dependencies]
libslop = { path = "../libslop" }
tokio = { version = "1", features = ["io-util"] }
serde_json = "1"
tracing = "0.1.44"

[lints]
workspace = true
