[package]
name = "libslopctl"
version = "0.1.0"
edition = "2024"
description = "Transport-agnostic client library for slopd — JSON-RPC protocol, typed methods, streaming"

[dependencies]
libslop = { path = "../libslop" }
tokio = { version = "1", features = ["io-util", "signal"] }
serde_json = "1"
tracing = "0.1.44"
clap = { version = "4.6.0", features = ["derive"] }
timeago = { version = "0.6.0", default-features = false }

[lints]
workspace = true
