[package]
name = "libsloptui-ratatui"
version = "0.1.0"
edition = "2024"
description = "Ratatui rendering and event loop for slopd TUI viewers"

[dependencies]
libslop = { path = "../libslop" }
libslopctl = { path = "../libslopctl" }
libsloptui-core = { path = "../libsloptui-core" }
tokio = { version = "1", features = ["sync"] }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
timeago = { version = "0.6.0", default-features = false }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing-appender = "0.2"
dirs = "6.0.0"

[lints]
workspace = true
