[package]
name = "slopctl"
version = "0.1.0"
edition = "2024"
description = "CLI client for slopd — all user-facing subcommands"

[dependencies]
libslop = { path = "../libslop" }
libslopctl = { path = "../libslopctl" }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
clap = { version = "4.6.0", features = ["derive"] }

[dev-dependencies]
libsloptest = { path = "../libsloptest" }

[lints]
workspace = true
