[package]
name = "slopd"
version = "0.1.0"
edition = "2024"

[dependencies]
libslop = { path = "../libslop" }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
dashmap = "6.1.0"
libc = "0.2.183"
clap = { version = "4.6.0", features = ["derive"] }

[dev-dependencies]
libsloptest = { path = "../libsloptest" }
libslop = { path = "../libslop" }
serde_json = "1"

[lints]
workspace = true
