[package]
name = "slopd"
version = "0.1.0"
edition = "2024"
description = "Claude agent session manager daemon — tmux management, RPC server, event broadcasting"

[features]
# Enables test-only knobs (e.g. SLOPD_TEST_RUN_YIELD_MS) used by integration
# tests to make timing-sensitive races deterministic.  Must never be enabled
# in production builds.
testing = []

[dependencies]
libslop = { path = "../libslop" }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
dashmap = "6.1.0"
libc = "0.2.183"
clap = { version = "4.6.0", features = ["derive"] }
tokio-util = "0.7"

[dev-dependencies]
libsloptest = { path = "../libsloptest" }
libslopctl = { path = "../libslopctl" }
libslop = { path = "../libslop" }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[lints]
workspace = true
