[package]
name = "sloptui"
version = "0.1.0"
edition = "2024"
description = "TUI process viewer for slopd"

[dependencies]
libslop = { path = "../libslop" }
libslopctl = { path = "../libslopctl" }
libsloptui-ratatui = { path = "../libsloptui-ratatui" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.44"
clap = { version = "4.6.0", features = ["derive"] }

[lints]
workspace = true
